welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:6: error: '(' expected but '{' found.
 else if {
         ^Program:9: error: illegal start of simple expression
 }
 ^