welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
 if (estSurBiscuit()==true) {
 	return true
 }
 else if {
 	return false
 }
 }

 

 haveBaggle()

 	
 	
 	
 